# Homework_CPP-16

./: .gitignore
3_Basic_programming_n_Cpp/: .gitignore
3_Basic_programming_n_Cpp/Lesson_10/Task_1/: my_first_cmake_program.vcxproj.filters
3_Basic_programming_n_Cpp/Lesson_10/Task_2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj.filters
3_Basic_programming_n_Cpp/Lesson_11/Task_5/: CMakeLists.txt  Figure.h  Isosceles_triangle.h  Rhomb.cpp
3_Basic_programming_n_Cpp/Lesson_2/Задача 2. Счета/: Задача 2. Счета.sln
3_Basic_programming_n_Cpp/Lesson_4/Задача 2. Сортируем адреса/: Задача 2. Сортируем адреса.sln
3_Basic_programming_n_Cpp/Lesson_9/Task_2/: Task_2.sln
3_Basic_programming_n_Cpp/RacingSimulator_Cmake/: BootsTerrainVehicle.h
4_Algorithms_and_data_structures/Lesson_6/Task_1/: Task_1.sln
5_Advanced_Programming_Cpp/Lesson_2/Task_2/: Task_2.sln
5_Advanced_Programming_Cpp/Lesson_4/Task_2/: unit_test.cpp
Advanced_Programming_Cpp/Lesson_4/Task_1/: CMakeLists.txt  main.cpp
Advanced_Programming_Cpp/Lesson_4/Task_2/: CMakeLists.txt  main.cpp
Basic_programming_n_Cpp/RacingSimulator_Cmake/: Broom.cpp  CMakeLists.txt  Camel.cpp  CamelFast.cpp  Centaur.cpp  Eagle.cpp  Eagle.h  General_Functions.cpp  General_Functions.h  Ground_Race.h  Ground_and_Air_Race.cpp  Race.cpp  Race.h  header_dll.h
Course_project_Parser_INI files/: Course_project_Parser_INI files.sln
Course_project_Parser_INI files/Course_project_Parser_INI files/: Course_project_Parser_INI files.cpp  Course_project_Parser_INI files.vcxproj  Course_project_Parser_INI files.vcxproj.filters  IniParser.h  file.ini
Course_project_Thread_safe_queue/Thread_safe_queue/: Thread_safe_queue.sln  Thread_safe_queue.vcxproj  main.cpp
Cross-platform_development_on_Qt/: .gitignore
Cross-platform_development_on_Qt/10_TCP_client/: mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
Cross-platform_development_on_Qt/1_Qt_widgets/: CMakeLists.txt  main.cpp
Cross-platform_development_on_Qt/2_Basic_Qt_Modules/: CMakeLists.txt  main.cpp
Cross-platform_development_on_Qt/3_Qt_Designer/: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross-platform_development_on_Qt/4_Qt_Widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross-platform_development_on_Qt/5_Slots_and_Signals/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_main.h  stopwatch.cpp  stopwatch.h
Cross-platform_development_on_Qt/6_QtConcurrent/: CMakeLists.txt  mainwindow.cpp
Cross-platform_development_on_Qt/8_Qt_SQL/: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross-platform_development_on_Qt/9_UDP_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Cross-platform_development_on_Qt/Final_work_Airport_Inspector/: CMakeLists.txt  airportcongestion.cpp  airportcongestion.h  airportcongestion.ui  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  Приложение Б. Матрица проверки требований.docx
Design_patterns_in_Cpp/1_Generative patterns/: 1_Generative patterns.sln  1_Generative patterns.vcxproj  main.cpp
DiplomWork/: ParametersIndexing.ini  SettingsPostgreSQL.ini
DiplomWork/Indexation/: CMakeLists.txt  catalog.cpp  catalog.h  database.cpp  database.h  main.cpp
DiplomWork/SearchEngine/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_10/: .gitignore
Lesson_10/Task_1/: CMakeLists.txt  my_first_cmake_program.cpp  my_first_cmake_program.vcxproj  my_first_cmake_project.sln
Lesson_10/Task_2/: Class_hierarchy_program.vcxproj  Class_hierarchy_program.vcxproj.filters  Class_hierarchy_project.sln  ZERO_CHECK.vcxproj
Lesson_10/Task_2/source_code/: CMakeLists.txt  Equilateral_triangle.cpp  Quadrat.h  Quadrilateral.cpp  Quadrilateral.h  Right_angled_triangle.h  Triangle.cpp
Lesson_10/Task_2/source_files/: CMakeLists.txt  Figure.h  Parallelogram.cpp  Rectangle.cpp  Triangle.h
Lesson_11/Task_1/: Static_Library.sln
Lesson_11/Task_2/: Dynamic_Library.sln
Lesson_11/Task_3/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMake_Dynamic_Library.sln  Dynam_Lib.vcxproj  Dynam_Lib_Client.vcxproj  Dynam_Lib_Client.vcxproj.filters  Dynamic_Library.vcxproj  Dynamic_Library.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Lesson_11/Task_3/source_files/: CMakeLists.txt  Dynam_Lib_Client.cpp  Leaver.h
Lesson_11/Task_5/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMake_Class_hierarchy.sln  Class_Hierarchy_Client.vcxproj  Class_Hierarchy_Client.vcxproj.filters  Class_Hierarchy_DLL.vcxproj  Class_Hierarchy_DLL.vcxproj.filters  Rhomb.h  Triangle.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Lesson_2/Задача 1. Месяцы/: Задача 1. Месяцы.sln
Lesson_3/Задача 2. Счётчик/: Задача 2. Счётчик.sln
Lesson_4/Задача 1. Адреса/: Задача 1. Адреса.sln
Lesson_5/Task_1/: Task_1.sln
Lesson_5/Task_2/: Task_2.sln
Lesson_6/Task_1/: Task_1.sln
Lesson_6/Task_2/: Task_2.sln
Lesson_6/Task_3/: Task_3.sln
Lesson_8/Task_1/: Task_1.sln
Lesson_8/Task_2/: Task_2.sln
Lesson_9/Task_1/: Task_1.sln
Multithreaded_and_asynchronous_programming/Lesson_4/: main.cpp
RacingSimulator_Cmake/: Air_Race.cpp  Air_Race.h  BootsTerrainVehicle.cpp  Broom.h  Camel.h  CamelFast.h  Centaur.h  FinalWork_RacingSimulator.cpp  FlyingCarpet.cpp  FlyingCarpet.h  Ground_Race.cpp  Ground_and_Air_Race.h
Resume/: Resume_Evgeny_Maslov.docx
working with databases/Lesson_4/: CREATE.sql  INSERT.sql  SELECT.sql
working with databases/Lesson_5/WorkPostgrre_SQL_inCpp/: CMakeLists.txt  ClientManagement.cpp  ClientManagement.h  functions.cpp  functions.h  main.cpp
Курсовой проект «Игра Жизнь»/: Курсовой проект «Игра Жизнь».sln
Курсовой проект «Игра Жизнь»/Курсовой проект «Игра Жизнь»/: t.txt  Курсовой проект «Игра Жизнь».cpp  Курсовой проект «Игра Жизнь».vcxproj  Курсовой проект «Игра Жизнь».vcxproj.filters
(+455 files in other folders)
