cmake_minimum_required(VERSION 3.22.0)
project(CMake_Dynamic_Library VERSION 0.1 LANGUAGES CXX)
set(LIBRARY_OUTPUT_NAME Dynamic_Library)
add_library(${LIBRARY_OUTPUT_NAME} SHARED Leaver.h Leaver.cpp)
set(PROJECT_NAME Dynam_Lib_Client)
add_executable(${PROJECT_NAME} Dynam_Lib_Client.cpp)
target_link_libraries(${PROJECT_NAME} ${LIBRARY_OUTPUT_NAME})
